Junit тест для блокирующей очереди